[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/enemies/flak/flak.gd" type="Script" id=1]
[ext_resource path="res://entities/enemies/flak/flak_barrel.png" type="Texture" id=2]
[ext_resource path="res://entities/enemies/flak/flak.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[sub_resource type="CircleShape2D" id=2]
radius = 7.07107

[node name="flak" type="Area2D"]
input_pickable = false
monitorable = false
script = ExtResource( 1 )

[node name="barrel" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 2 )
offset = Vector2( 8, 0 )

[node name="spawn" type="Node2D" parent="barrel"]
position = Vector2( 14, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="detection_radius" type="CollisionShape2D" parent="."]
show_behind_parent = true
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
show_behind_parent = true
shape = SubResource( 2 )

[node name="barrel_dummy" type="Node2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_flak_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_flak_body_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
